--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <div class="heart-disease" id="heartDisease">Game Over! Coffee Man has heart disease! 😵 💔</div>
 
   <button class="start-button" id="startButton" onclick="start()">Start</button>
-  <button class="button" id="clickButton" onclick="adjustGauges()" disabled>☕️</button>
+  <button class="button" id="clickButton" onclick="adjustGauges()" disabled><center>☕️</center></button>
 
   <script>
     let redGaugeValue = 80;
