--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       margin: 20px auto;
       font-size: 100px;
       text-align: center;
-      line-height: 10px;
+      line-height: 1000px;
       background-color: #555;
       color: white;
       border: none;
@@ -191,11 +191,11 @@
   </div>
 
   <button class="restart-button" id="restartButton" onclick="restartGame()" style="display:none;">try again ❤️‍🩹</button>
-    <div class="game-over" id="gameOver">Game Over! The coffee man fell asleep. 😪💤 </div>
+    <div class="game-over" id="gameOver">Game Over! The coffee man fell asleep. 😪💤</div>
   <div class="heart-disease" id="heartDisease">Game Over! Coffee Man has heart disease! 😵 💔</div>
 
   <button class="start-button" id="startButton" onclick="start()">Start</button>
-  <button class="button" id="clickButton" onclick="adjustGauges()" disabled><center>☕️</center></button>
+  <button class="button" id="clickButton" onclick="adjustGauges()" disabled>☕️</button>
 
   <script>
     let redGaugeValue = 80;
