--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
     /* 동그란 버튼 스타일 */
     .button {
       display: block;
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       margin: 20px auto;
-      font-size: 40px;
+      font-size: 100px;
       text-align: center;
-      line-height: 60px;
+      line-height: 40px;
       background-color: #555;
       color: white;
       border: none;
-      border-radius: 50%;
+      border-radius: 10px;
       cursor: pointer;
-      position: relative;
     }
 
     .button:hover {
