--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     /* 동그란 버튼 스타일 */
     .button {
       display: block;
-      width: 120px;
-      height: 120px;
+      width: auto;
+      height: autox;
       margin: 40px auto;
-      font-size: 100px;
+      font-size: auto;
       text-align: center;
       line-height: 40px;
       background-color: #555;
