--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     /* 동그란 버튼 스타일 */
     .button {
       display: block;
-      width: auto;
-      height: autox;
+      width: 100px auto;
+      height: 100px autox;
       margin: 40px auto;
-      font-size: auto;
+      font-size: 80px auto;
       text-align: center;
       line-height: 40px;
       background-color: #555;
