--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       text-align: center;
       line-height: 40px;
       background-color: #555;
+      text-align: center;
       color: white;
       border: none;
       border-radius: 90px;
