--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
     /* 동그란 버튼 스타일 */
     .button {
       display: block;
+      width: 0px;
+      height: 0px;
       margin: 40px auto;
       font-size: 100px;
       text-align: center;
-      line-height: 40px;
+      line-height: 150px;
       background-color: #555;
-      text-align: center;
       color: white;
       border: none;
       border-radius: 90px;
-      cursor: pointer;
     }
 
     .button:hover {
