--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
 
   <div class="gauge-container">
     <div class="gauge-bar-red" id="gaugeBarRed"></div>
-    <div class="gauge-info" id="redGaugeValue">BPM 80</div>
+    <div class="gauge-info" id="redGaugeValue">BPM 🫀 80</div>
     <div class="gauge-text" id="redGaugeText">빨간색 게이지</div>
   </div>
 
   <div class="gauge-container">
     <div class="gauge-bar-green" id="gaugeBarGreen"></div>
-    <div class="gauge-info" id="greenGaugeValue">Sleep 40</div>
+    <div class="gauge-info" id="greenGaugeValue">Sleep 😴 40</div>
     <div class="gauge-text" id="greenGaugeText">초록색 게이지</div>
   </div>
 
@@ -312,8 +312,8 @@
       document.getElementById("stopwatch").textContent = "0.00";
       document.getElementById("gaugeBarRed").style.width = "40%";
       document.getElementById("gaugeBarGreen").style.width = "40%";
-      document.getElementById("redGaugeValue").textContent = "BPM 80";
-      document.getElementById("greenGaugeValue").textContent = "Sleep 100";
+      document.getElementById("redGaugeValue").textContent = "BPM 🫀 80";
+      document.getElementById("greenGaugeValue").textContent = "Sleep 😴 100";
       document.getElementById("gameOver").style.display = "none";
       document.getElementById("heartDisease").style.display = "none";
       document.getElementById("restartButton").style.display = "none";
