--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="123.jpeg"/> 
+  <link rel="apple-touch-icon" href="123.jpeg"/> 
   <title>Coffee man</title>
   <style>
     /* 스톱워치 스타일 */
