--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
   <button class="start-button" id="startButton" onclick="start()">Start</button>
   <button class="emoji-button" id="clickButton" onclick="adjustGauges()" disabled>☕️</button>
 
-  <ins class="kakao_ad_area" style="display:none;"
-data-ad-unit = "DAN-ICqXL4FoAokpfBca"
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-cKFRpXzEALMWsQpQ"
 data-ad-width = "320"
 data-ad-height = "100"></ins>
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
