--- a/index.html
+++ b/index.html
@@ -206,12 +206,7 @@
   
   
   
-
-<ins class="kakao_ad_area" style="display:none;"
-data-ad-unit = "DAN-cKFRpXzEALMWsQpQ"
-data-ad-width = "320"
-data-ad-height = "100"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<script type="text/javascript"> var infolinks_pid = 3428932; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
   <script>
     let redGaugeValue = 80;
