--- a/index.html
+++ b/index.html
@@ -172,10 +172,26 @@
         opacity: 0; /* 점점 투명해짐 */
       }
     }
+    /* 전체 화면 버튼 스타일 */
+    #fullscreenButton {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    #fullscreenButton img {
+      width: 32px; /* 아이콘 너비 */
+      height: 32px; /* 아이콘 높이 */
+    }
   </style>
 </head>
 <body>
-
+  <button id="fullscreenButton" onclick="toggleFullscreen()">
+    <img src="fullscreen_icon_137565.png" alt="전체 화면">
+  </button>
   <div class="stopwatch" id="stopwatch">0.00</div>
 
   <div style="text-align:center; margin: 20px;">
@@ -201,10 +217,16 @@
   <button class="start-button" id="startButton" onclick="start()">Start</button>
   <button class="emoji-button" id="clickButton" onclick="adjustGauges()" disabled>☕️</button>
 
-
-
-
   <script>
+        function toggleFullscreen() {
+      if (!document.fullscreenElement) {
+          document.documentElement.requestFullscreen().catch(err => {
+          console.error(`Error attempting to enable full-screen mode: ${err.message}`);
+        });
+      } else {
+          document.exitFullscreen();
+      }
+    }
     let redGaugeValue = 80;
     let greenGaugeValue = 40;
     let stopwatchTime = 0;
