--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale-1.0, user-scalable=no">
-  <textarea readonly></textarea>
   <link rel="apple-touch-icon" href="123.jpeg"/> 
   <title>Coffee man</title>
   <style>
@@ -372,4 +371,4 @@
     }
   </script>
 </body>
-</html>
+</html>1
