--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-html lang="ko">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale-1.0, user-scalable=no">
@@ -371,4 +371,4 @@ html lang="ko">
     }
   </script>
 </body>
-</html
+</html>
